# siws-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  message.rs  output.rs  pubkey.rs  signature.rs
tests/: full_message.txt  integration_tests.rs  test_message.json
