[package]
name = "siws"
version = "0.0.1"
license = "MIT"
description = "Lightweight Sign in With Solana library adhering to the Solana Wallet Standard."
homepage = "https://github.com/pileks/siws-rs"
repository = "https://github.com/pileks/siws-rs"
readme = "README.md"
authors = ["Jure Granić-Skender | Pileks"]
keywords = ["solana", "sign-in", "siws"]
categories = ["authentication", "cryptography::cryptocurrencies"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive", "std"] }
ed25519-dalek = "1.0.1"
bs58 = "0.5.1"
thiserror = "1.0.58"
time = { version = "0.3.36", features = ["parsing", "formatting"] }

[dev-dependencies]
serde_json = "1.0.115"
rand = "0.7.0"
rand_chacha = { version = "0.3.1" }
getrandom = { version = "0.2.10", features = ["custom"] }
matches = "0.1.10"

# This patch is needed due to version conflicts around the zeroize crate
# More info: https://github.com/solana-labs/solana/blob/master/Cargo.toml#L514
[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"